idf_component_register(SRCS 
                            "key.c" 
                            "main.c"
                            "st7735.c"
                            "wifi.c"
                            "led.c"
                            "http_weather.c"
                            "font.c"
                            "hal_lcd.c"
                            "public.c"
                    INCLUDE_DIRS ".")